[gd_scene load_steps=5 format=3 uid="uid://ddcsnf356ihbu"]

[ext_resource type="Script" path="res://script/menu_pause.gd" id="1_wiqmh"]
[ext_resource type="Texture2D" uid="uid://bosetksojcykw" path="res://textures/GUI/gui_load_screen.png" id="2_grlsg"]
[ext_resource type="Texture2D" uid="uid://cr3x1aer5v42y" path="res://textures/GUI/gui_GS.png" id="3_eldqs"]
[ext_resource type="Texture2D" uid="uid://dvwdxy6yreko" path="res://textures/GUI/gui_game_pose.png" id="4_u35v2"]

[node name="MenuPause" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wiqmh")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.686275)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_grlsg")

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 3840.0
offset_bottom = 2160.0
texture = ExtResource("3_eldqs")

[node name="TextureRect3" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 3840.0
offset_bottom = 2160.0
texture = ExtResource("4_u35v2")

[node name="resume" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
offset_left = 511.0
offset_top = 1181.0
offset_right = 1210.0
offset_bottom = 1492.0

[node name="restart" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
offset_left = 1490.0
offset_top = 1159.0
offset_right = 2336.0
offset_bottom = 1491.0

[node name="quit" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
offset_left = 2639.0
offset_top = 1189.0
offset_right = 3328.0
offset_bottom = 1480.0

[connection signal="pressed" from="resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]
